added flops file

--- a/body.tex
+++ b/body.tex
@@ -5,6 +5,7 @@ Hello
  - Fm transform, Orlov reconstruction, action on cohomology, blowup formula
 
 \section{Flips and flops}
+\input{flops.tex}
 
 \section{K3 surfaces and the cubic fourfold}
 
