--- a/commands.tex
+++ b/commands.tex
@@ -3,7 +3,7 @@
 %\usepackage[dvipsnames]{xcolor}
 \tcbuselibrary{theorems}
 \usepackage{mdframed}
-\usepackage{amsmath, amsfonts, amsthm, bbm, thmtools, hyperref}
+\usepackage{amsmath, amsfonts, amsthm, amscd, bbm, thmtools, hyperref}
 \usepackage{pgfplots}
 \usepackage[all]{xy}
 \usepackage{mathtools}
@@ -60,7 +60,7 @@
 
 \newtcbtheorem[use counter from = theorem]{definition}{Definition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries,  fontupper=\itshape}{dfn}
 
-\newtcbtheorem[use counter from = theorem]{prop}{Proposition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries,  fontupper=\itshape}{prop}
+\newtcbtheorem[use counter from = theorem]{proposition}{Proposition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries,  fontupper=\itshape}{prop}
 
 \newtcbtheorem[use counter from = theorem]{cor}{Corollary} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=black, fonttitle = \upshape\bfseries,  fontupper=\itshape}{cor}
 
